force-app/main/default/objects/CAZ_Planta__c/CAZ_Planta__c.object-meta.xml
<CustomObject>
    <label>Planta</label>
    <nameField>
        <label>Planta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plantas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>