force-app/main/default/objects/CAZ_Planta__c/fields/CAZ_Codigo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Codigo__c</fullName>
    <externalId>true</externalId>
    <label>CAZ_Código</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>