force-app/main/default/objects/CAZ_Planta__c/fields/CAZ_Zona__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Zona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAZ_Zona</label>
    <referenceTo>CAZ_Zona__c</referenceTo>
    <relationshipName>CAZ_Plantas</relationshipName>
    <type>Lookup</type>
</CustomField>