force-app/main/default/objects/CAZ_Planta__c/fields/Filtro__c.field-meta.xml
<CustomField>
    <fullName>Filtro__c</fullName>
    <defaultValue>&quot;Todas&quot;</defaultValue>
    <label>Filtro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>